[package]
name = "luna_cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
luna_api = { path = "../api" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
serde_json = "1"
handlebars = { version = "6", features = ["rust-embed"] }
rust-embed = { version = "8", features = ["include-exclude"] }
